# Bragg-Peak

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  pyproject.toml
brag_deep_learning/: deep-research-report.md  six-month-model-plan.md  transformer-vs-operator-investigation.md
braggpeak/: __init__.py  analytic_bragg.py  benchmark.py  calibrate.py  cli.py  ct_materials.py  io.py  materials.py  ml_surrogate.py  monte_carlo_gate.py  scoring.py  sde_model.py  stopping_power.py  transport.py  units.py  validation.py
braggtransporter/: INTERFACES.md  __init__.py  calibration.py  config.py  evaluate.py  metrics.py  physics_prior.py  pretrain.py  schema.py  train.py  uncertainty.py
configs/: bt_v0_1d.yaml  doserad_run20.yaml  heterogeneous_bone_150mev.yaml  water_150mev.yaml
docs/: AUDIT3_ITER1.md  AUDIT3_ITER2.md  FINAL_REPORT.md  PLATEAU_DIAGNOSIS.md  STATUS.md  gcp_env.md  gcp_runbook.md  gcp_setup_prompt.md
scripts/: ablation_2a.py  ablation_2b.py  gcp_bootstrap.sh  gcp_iter_launch.sh  gcp_scaling_startup.sh  gcp_train.sh  gcp_watch.py  gen_mc_pairs.py  package_doserad_run.py  phase1_gate.sh  phase3_data_efficiency.py  phase3_letd_validation.py  phase4_uncertainty.py  phase5_doserad.py  phase6_ood_abstention.py  reproduce.sh  run_2b_focused.sh  sharp_comparison.py  train_doserad_gpu.py  vm_download_doserad.py
tests/: test_bt_ablation2a.py  test_bt_data.py  test_bt_depth_noclip.py  test_bt_doserad.py  test_bt_doserad_physics.py  test_bt_doserad_scale.py  test_bt_dota3d.py  test_bt_dota3d_spatial.py  test_bt_lr_schedule.py  test_bt_mamba.py  test_bt_metrics.py  (+20 more)
(+65 files in other folders)
